@@ -1,5 +1,11 @@
 2008-02-16  Jaap Haitsma  <jaap@haitsma.org>
 
+	* src/netspeed.c: (change_icons), (display_help):
+	* src/netspeed.h:
+	Move all definitions from netspeed.h to netspeed.c
+
+2008-02-16  Jaap Haitsma  <jaap@haitsma.org>
+
 	Remove .cvsignore files
 
 2008-02-16  Jaap Haitsma  <jaap@haitsma.org>
